--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Utah Family Magician / Scott chamberlain</title>
-	<meta name="keywords" content="Utah Magician, Magic, Magician, Birthday, Party, Family, Children, Comedy, Birthday Party"><!--only up to 12-->
+	<meta name="keywords" content="Utah Magician, Magic, Magician, Birthday, Party, Family, Children, Comedy, Birthday Party, Great Scott Magic"><!--only up to 12-->
 	<meta name="description" content="Utah Family Magician for birthday parties, family gatherings, or corporate events.  Serving Utah and Salt Lake Counties"><!--whatever I put in google for my description 280 characters-->
   <link rel="stylesheet" href="combo.css">
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
