--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Utah Family Magician / Scott chamberlain</title>
+  <title>Utah Family Magician / Scott Chamberlain</title>
 	<meta name="keywords" content="Utah Magician, Magic, Magician, Birthday, Party, Family, Children, Comedy, Birthday Party, Great Scott Magic"><!--only up to 12-->
 	<meta name="description" content="Utah Family Magician for birthday parties, family gatherings, and corporate events.  Serving Utah, Salt Lake, and surrounding counties"><!--whatever I put in google for my description 280 characters-->
   <link rel="stylesheet" href="combo.css">
