--- a/404.html
+++ b/404.html
@@ -1,14 +1,12 @@
----
-layout: default
-permalink: /404.html
----
-
-<section class="lost-container">
-  <h1>Uh oh!</h1>
-  <div class="link">
-    <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/error.gif" />
-  </div>
-  <br />
-  <br />
-  <a href="/">I have no clue where I'm at.  Take me home!</a>
-</section>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8"
+    <title>My 404 page</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Welcome to my 404 page</h1>
+  </body>
+</html>
+  
