--- a/classexample.html
+++ b/classexample.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <h1 style="text-align: center;">Great Scott Magic</h1>
 <h2 style="text-align: center;">Magic Classes</h2>
 <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://www.utahmagicshows.com/img/street%20Fair.jpg" alt="street fair" width="204" height="153" /></p>
@@ -38,3 +38,4 @@
 </tr>
 </tbody>
 </table>
+</html>
