--- a/classexample.html
+++ b/classexample.html
@@ -1,7 +1,7 @@
 <html>
 <h1 style="text-align: center;">Great Scott Magic</h1>
 <h2 style="text-align: center;">Magic Classes</h2>
-<p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://www.utahmagicshows.com/img/street%20Fair.jpg" alt="street fair" width="204" height="153" /></p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="img/street%20Fair.jpg" alt="street fair" width="204" height="153" /></p>
 <p>&nbsp;</p>
 <table>
 <tbody style="background: lightblue;">
@@ -16,11 +16,11 @@
 <tbody style="background: lightblue;">
 <tr>
 <td>This field will have the class and location with possible links to such</td>
-<td><img style="display: block; margin-left: auto; margin-right: auto;" src="https://www.utahmagicshows.com/img/street%20Fair.jpg" alt="street fair" width="204" height="153" /></td>
+<td><img style="display: block; margin-left: auto; margin-right: auto;" src="img/street%20Fair.jpg" alt="street fair" width="204" height="153" /></td>
 </tr>
 <tr>
 <td>This field will have another page of information for another class. You'd have to click on the links to make something look cool</td>
-<td>&nbsp;<img src="https://www.utahmagicshows.com/img/Orem%20Library%202017-18.jpg" alt="library" width="204" height="136" /></td>
+<td>&nbsp;<img src="img/Orem%20Library%202017-18.jpg" alt="library" width="204" height="136" /></td>
 </tr>
 </tbody>
 </table>
@@ -30,11 +30,11 @@
 <tbody>
 <tr>
 <td>This field will have the class and location with possible links to such</td>
-<td><img style="display: block; margin-left: auto; margin-right: auto;" src="https://www.utahmagicshows.com/img/street%20Fair.jpg" alt="street fair" width="204" height="153" /></td>
+<td><img style="display: block; margin-left: auto; margin-right: auto;" src="img/street%20Fair.jpg" alt="street fair" width="204" height="153" /></td>
 </tr>
 <tr>
 <td>This field will have another page of information for another class. You'd have to click on the links to make something look cool</td>
-<td>&nbsp;<img src="https://www.utahmagicshows.com/img/Orem%20Library%202017-18.jpg" alt="library" width="204" height="136" /></td>
+<td>&nbsp;<img src="img/Orem%20Library%202017-18.jpg" alt="library" width="204" height="136" /></td>
 </tr>
 </tbody>
 </table>
